--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.9.3",
     "@types/styled-components": "5.1.21",
     "@u-wave/react-vimeo": "^0.9.5",
+    "atomize": "^1.0.28",
     "firebase": "^9.8.2",
     "gatsby": "4.5.4",
     "gatsby-background-image": "1.6.0",
@@ -25,6 +26,7 @@
     "gatsby-plugin-react-helmet": "5.5.0",
     "gatsby-plugin-sass": "5.5.0",
     "gatsby-plugin-sharp": "4.5.2",
+    "gatsby-plugin-styletron": "^7.16.0",
     "gatsby-source-filesystem": "4.5.2",
     "gatsby-transformer-sharp": "4.5.0",
     "i18next": "^21.8.4",
@@ -37,6 +39,7 @@
     "react-images-uploading": "^3.1.6",
     "react-redux": "^8.0.1",
     "react-slick": "^0.28.1",
+    "react-transition-group": "^4.4.2",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "sass": "1.49.0",
